# OVNode

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  install.sh  installer.py  pyproject.toml
.github/workflows/: ci.yml  docker.yml
core/routers/: router.py
core/scripts/: ovpanel-client-connect.sh  ovpanel-client-disconnect.sh
core/service/: multilogin.py  sessions.py
docs/: multi-login.md
tests/: test_app.py
